Transport addresses are IP only, not port
