# connection-api/examples/server/server.rs
@@ -109,44 +109,44 @@ impl<C> Api<C> for Server<C> where C: Has<XSpanIdString> + Send + Sync
     /// Instructs a worker to add another worker to an existing E1AP interface instance
     async fn add_e1ap(
         &self,
-        transport_address: models::TransportAddress,
+        body: models::IpAddress,
         context: &C) -> Result<AddE1apResponse, ApiError>
     {
         let context = context.clone();
-        info!("add_e1ap({:?}) - X-Span-ID: {:?}", transport_address, context.get().0.clone());
+        info!("add_e1ap({:?}) - X-Span-ID: {:?}", body, context.get().0.clone());
         Err(ApiError("Generic failure".into()))
     }
 
     /// Instructs a worker to add another worker to an existing F1AP interface instance
     async fn add_f1ap(
         &self,
-        transport_address: models::TransportAddress,
+        body: models::IpAddress,
         context: &C) -> Result<AddF1apResponse, ApiError>
     {
         let context = context.clone();
-        info!("add_f1ap({:?}) - X-Span-ID: {:?}", transport_address, context.get().0.clone());
+        info!("add_f1ap({:?}) - X-Span-ID: {:?}", body, context.get().0.clone());
         Err(ApiError("Generic failure".into()))
     }
 
     /// Instructs a worker to join an existing NGAP interface instance set up by another worker.
     async fn join_ngap(
         &self,
-        transport_address: models::TransportAddress,
+        body: models::IpAddress,
         context: &C) -> Result<JoinNgapResponse, ApiError>
     {
         let context = context.clone();
-        info!("join_ngap({:?}) - X-Span-ID: {:?}", transport_address, context.get().0.clone());
+        info!("join_ngap({:?}) - X-Span-ID: {:?}", body, context.get().0.clone());
         Err(ApiError("Generic failure".into()))
     }
 
     /// Instructs a worker to set up an NGAP interface instance with the AMF
     async fn setup_ngap(
         &self,
-        transport_address: models::TransportAddress,
+        body: models::IpAddress,
         context: &C) -> Result<SetupNgapResponse, ApiError>
     {
         let context = context.clone();
-        info!("setup_ngap({:?}) - X-Span-ID: {:?}", transport_address, context.get().0.clone());
+        info!("setup_ngap({:?}) - X-Span-ID: {:?}", body, context.get().0.clone());
         Err(ApiError("Generic failure".into()))
     }
 
