# connection-api/src/models.rs
@@ -165,132 +165,45 @@ impl std::ops::DerefMut for Error {
 }
 
 
-#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
+#[derive(Debug, Clone, PartialEq, PartialOrd, serde::Serialize, serde::Deserialize)]
 #[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
-pub struct TransportAddress {
-    #[serde(rename = "host")]
-    pub host: String,
+pub struct IpAddress(String);
 
-    #[serde(rename = "port")]
-    pub port: u16,
-
-}
-
-impl TransportAddress {
-    #[allow(clippy::new_without_default)]
-    pub fn new(host: String, port: u16, ) -> TransportAddress {
-        TransportAddress {
-            host,
-            port,
-        }
+impl std::convert::From<String> for IpAddress {
+    fn from(x: String) -> Self {
+        IpAddress(x)
     }
 }
 
-/// Converts the TransportAddress value to the Query Parameters representation (style=form, explode=false)
-/// specified in https://swagger.io/docs/specification/serialization/
-/// Should be implemented in a serde serializer
-impl std::string::ToString for TransportAddress {
+impl std::string::ToString for IpAddress {
     fn to_string(&self) -> String {
-        let params: Vec<Option<String>> = vec![
-
-            Some("host".to_string()),
-            Some(self.host.to_string()),
-
-
-            Some("port".to_string()),
-            Some(self.port.to_string()),
-
-        ];
-
-        params.into_iter().flatten().collect::<Vec<_>>().join(",")
+       self.0.to_string()
     }
 }
 
-/// Converts Query Parameters representation (style=form, explode=false) to a TransportAddress value
-/// as specified in https://swagger.io/docs/specification/serialization/
-/// Should be implemented in a serde deserializer
-impl std::str::FromStr for TransportAddress {
-    type Err = String;
-
-    fn from_str(s: &str) -> std::result::Result<Self, Self::Err> {
-        /// An intermediate representation of the struct to use for parsing.
-        #[derive(Default)]
-        #[allow(dead_code)]
-        struct IntermediateRep {
-            pub host: Vec<String>,
-            pub port: Vec<u16>,
-        }
-
-        let mut intermediate_rep = IntermediateRep::default();
-
-        // Parse into intermediate representation
-        let mut string_iter = s.split(',');
-        let mut key_result = string_iter.next();
-
-        while key_result.is_some() {
-            let val = match string_iter.next() {
-                Some(x) => x,
-                None => return std::result::Result::Err("Missing value while parsing TransportAddress".to_string())
-            };
-
-            if let Some(key) = key_result {
-                #[allow(clippy::match_single_binding)]
-                match key {
-                    #[allow(clippy::redundant_clone)]
-                    "host" => intermediate_rep.host.push(<String as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
-                    #[allow(clippy::redundant_clone)]
-                    "port" => intermediate_rep.port.push(<u16 as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
-                    _ => return std::result::Result::Err("Unexpected key while parsing TransportAddress".to_string())
-                }
-            }
-
-            // Get the next key
-            key_result = string_iter.next();
-        }
-
-        // Use the intermediate representation to return the struct
-        std::result::Result::Ok(TransportAddress {
-            host: intermediate_rep.host.into_iter().next().ok_or_else(|| "host missing in TransportAddress".to_string())?,
-            port: intermediate_rep.port.into_iter().next().ok_or_else(|| "port missing in TransportAddress".to_string())?,
-        })
+impl std::str::FromStr for IpAddress {
+    type Err = std::string::ParseError;
+    fn from_str(x: &str) -> std::result::Result<Self, Self::Err> {
+        std::result::Result::Ok(IpAddress(x.to_string()))
     }
 }
 
-// Methods for converting between header::IntoHeaderValue<TransportAddress> and hyper::header::HeaderValue
-
-#[cfg(any(feature = "client", feature = "server"))]
-impl std::convert::TryFrom<header::IntoHeaderValue<TransportAddress>> for hyper::header::HeaderValue {
-    type Error = String;
-
-    fn try_from(hdr_value: header::IntoHeaderValue<TransportAddress>) -> std::result::Result<Self, Self::Error> {
-        let hdr_value = hdr_value.to_string();
-        match hyper::header::HeaderValue::from_str(&hdr_value) {
-             std::result::Result::Ok(value) => std::result::Result::Ok(value),
-             std::result::Result::Err(e) => std::result::Result::Err(
-                 format!("Invalid header value for TransportAddress - value: {} is invalid {}",
-                     hdr_value, e))
-        }
+impl std::convert::From<IpAddress> for String {
+    fn from(x: IpAddress) -> Self {
+        x.0
     }
 }
 
-#[cfg(any(feature = "client", feature = "server"))]
-impl std::convert::TryFrom<hyper::header::HeaderValue> for header::IntoHeaderValue<TransportAddress> {
-    type Error = String;
+impl std::ops::Deref for IpAddress {
+    type Target = String;
+    fn deref(&self) -> &String {
+        &self.0
+    }
+}
 
-    fn try_from(hdr_value: hyper::header::HeaderValue) -> std::result::Result<Self, Self::Error> {
-        match hdr_value.to_str() {
-             std::result::Result::Ok(value) => {
-                    match <TransportAddress as std::str::FromStr>::from_str(value) {
-                        std::result::Result::Ok(value) => std::result::Result::Ok(header::IntoHeaderValue(value)),
-                        std::result::Result::Err(err) => std::result::Result::Err(
-                            format!("Unable to convert header value '{}' into TransportAddress - {}",
-                                value, err))
-                    }
-             },
-             std::result::Result::Err(e) => std::result::Result::Err(
-                 format!("Unable to convert header: {:?} to string: {}",
-                     hdr_value, e))
-        }
+impl std::ops::DerefMut for IpAddress {
+    fn deref_mut(&mut self) -> &mut String {
+        &mut self.0
     }
 }
 
